media query for mobile

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Leah Borns' mindblowing Portfolio</title>
+
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
         <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto" rel="stylesheet">
@@ -10,13 +11,13 @@
 
     <body>
         <nav role="navigation">
-           <div class="content topnav myTopnav">
-               <div id="nav-logo"><a href="#">LEAH BORNS</a></div>
-                <ul id="nav-links">
-                    <li><a href="#about-me-section">About</a></li>
+           <div class="content">
+               <div id="nav-logo"><a href="#" >LEAH BORNS</a></div>
+               <ul id="nav-links">
+                    <li><a href="#about-me-section" class="jumper">About</a></li>
 <!--                    <li><a href="#skills-section">Skills</a></li>-->
-                    <li><a href="#project-section">Projects</a></li>
-                    <li><a href="#contact-section">Connect</a></li><li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><img src="images/nav-bar.png" alt="collapsible nav bar" class="fa fa-bars"></a></li>
+                   <li><a href="#project-section" class="jumper">Projects</a></li>
+                   <li><a href="#contact-section" class="jumper">Connect</a></li>
                 </ul>
             </div>
         </nav>
@@ -26,8 +27,8 @@
               <div id="header-title">
                <p id="header-p">The name is <br> <span>Borns</span><br>Leah Borns.
                 </p>
-                  <p class="header-description">&lt;FullStackDeveloper &#47;&gt;
-                  <p class="header-description">&lt;SustainabilityEnabler &#47;&gt;</p> <p class="header-description">&lt;FreshWaterLover &#47;&gt;</p>
+                  <p class="header-description">&lt;Full<span class="bold">Stack</span>Developer &#47;&gt;
+                  <p class="header-description">&lt;Sustainability<span class="bold">Enabler</span> &#47;&gt;</p> <p class="header-description">&lt;Fresh<span class="bold">Water</span>Lover &#47;&gt;</p>
                 </div>
 
 
@@ -63,9 +64,7 @@
                 <p id="am-section-header">Leah made these</p>
 <!--                UPBEAT ATLAS-->
                 <div id="upbeat-atlas-app">
-                       <div class="project-img">
-                        <img class="project-screenshot" src="images/upbeat-atlas-screenshot.png" alt="upbeat atlas screenshot">
-                    </div>
+
 
                     <div class="project-info">
                             <h3>Upbeat Atlas</h3>
@@ -76,6 +75,9 @@
                             </div>
                         <p>Finding upcoming shows is as easy as a click of a search button but getting to a show can be a nightmare. Not only is parking impossible but it puts so many cars on the road and increases carbon emissions. With Upbeat Atlas I wanted to create an easy way for event goers to locate their next show with a Google map to easily find directions along with a gentle nudge to consider taking a more sustainable way.
                         </p>
+                    </div>
+                    <div class="project-img">
+                        <img class="project-screenshot" src="images/upbeat-atlas-screenshot.png" alt="upbeat atlas screenshot">
                     </div>
                 </div>
                     <button class="project-links"><a target="_blank" href="https://leahborns.github.io/upbeat-atlas-artist-finder-songkick-api-capstone/index.html">Live app</a></button>
@@ -105,9 +107,7 @@
 
 <!--         COMMUTE CALCULATOR       -->
                 <div id="commute-calculator-app">
-                    <div class="project-img">
-                        <img class="project-screenshot" src="images/commute-calc-screenshot.png" alt="commute calc screenshot">
-                    </div>
+
 
                     <div class="project-info">
                         <h3>Co<sub>2</sub>mmute Calculator</h3>
@@ -120,6 +120,9 @@
                             <img src="images/react.png" alt="React">
                         </div>
                         <p>Co2mmute calculator is a simple way for bike commuters to keep track of their milage and the positive impact they are having each time they decide to pedal vs drive. This app will show the positive impact that bike commuting can have on our communities by comparing how much co2 they divert compared to a prius, average size car and an SUV. The ability to put a number and impact on their commute may encourage them to commute more as well as others to start.
+                    </div>
+                    <div class="project-img">
+                        <img class="project-screenshot" src="images/commute-calc-screenshot.png" alt="commute calc screenshot">
                     </div>
                 </div>
                 <button class="project-links"><a target="_blank" href="https://leahborns.github.io/commute-calculator-final-capstone-react/build">Live app</a></button>
