text wrap for about me section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
             <section id="about-me-section">
                 <p id="am-section-header">this is Leah</p>
                 <div id="about-me-group">
+
+                    <div id="profile-img">
+                        <img id="profile-pic" src="images/profile-pic" alt="profile picture">
+                    </div>
+                        <p class="about-me">I consider myself a bit of a polymath as I've become adept at a diverse combination of skills through a breadth of experiences. For example: I have surveyed 100's of miles of river for invasive plant species; mixed ideas with other innovative minds while pursuing a certificate in sustainable business; and most recently, I finished a full stack program at Thinkful. <br> For me, coding has been the perfect fusion of analytical and creative thinking. I love that it promotes the use of both sides of my brain while requiring continuous education as languages and frameworks keep evolving. <br> When I’m not coding you can find me immersed in nature identifying plants, biking, hiking, brewing beer, and strumming my uke.
+                        </p>
+
+
+<!--
                 <div id="profile-deets" class="clearfix">
                     <p class="about-me">I consider myself a bit of a polymath as I've become adept at a diverse combination of skills through a breadth of experiences. For example: I have surveyed 100's of miles of river for invasive plant species; mixed ideas with other innovative minds while pursuing a certificate in sustainable business; and most recently, I finished a full stack program at Thinkful.</p>
                     <p class="about-me"> For me, coding has been the perfect fusion of analytical and creative thinking. I love that it promotes the use of both sides of my brain while requiring continuous education as languages and frameworks keep evolving.</p>
@@ -46,6 +55,7 @@
                 <div id="profile-img">
                     <img id="profile-pic" src="images/profile-pic" alt="profile picture">
                 </div>
+-->
                 </div>
             </section>
 
