--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
                     <div id="profile-img">
                         <img id="profile-pic" src="images/profile-pic" alt="profile picture">
                     </div>
-                        <p class="about-me">I consider myself a bit of a polymath as I've become adept at a diverse combination of skills through a breadth of experiences. For example: I have surveyed 100's of miles of river for invasive plant species; mixed ideas with other innovative minds while pursuing a certificate in sustainable business; and most recently, I finished a full stack program at Thinkful. <br> For me, coding has been the perfect fusion of analytical and creative thinking. I love that it promotes the use of both sides of my brain while requiring continuous education as languages and frameworks keep evolving. <br> When I’m not coding you can find me immersed in nature identifying plants, biking, hiking, brewing beer, and strumming my uke.
-                        </p>
+                    <p class="about-me">I consider myself a bit of a polymath as I've become adept at a diverse combination of skills through a breadth of experiences. For example: I have surveyed 100's of miles of river for invasive plant species; mixed ideas with other innovative minds while pursuing a certificate in sustainable business; and most recently, I finished a full stack program at Thinkful.</p>
+                    <p class="about-me"> For me, coding has been the perfect fusion of analytical and creative thinking. I love that it promotes the use of both sides of my brain while requiring continuous education as languages and frameworks keep evolving.</p>
+                    <p class="about-me">When I’m not coding you can find me immersed in nature identifying plants, biking, hiking, brewing beer, and strumming my uke.
+                    </p>
 
 
 <!--
@@ -71,7 +73,7 @@
 -->
 
             <section id="project-section">
-                <p id="am-section-header">Leah made these</p>
+                <p class="section-header">Leah made these</p>
 <!--                UPBEAT ATLAS-->
                 <div id="upbeat-atlas-app">
 
@@ -140,7 +142,7 @@
             </section>
 
             <section id="contact-section">
-                <p id="am-section-header">connect with Leah</p>
+                <p class="section-header">connect with Leah</p>
                <div id="contact-info">
                     <p>p. 971.940.2869</p>
                     <p>e. leah.borns@gmail.com</p>
