--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html land='en'>
+<html lang='en'>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -46,19 +46,6 @@
                     <p class="about-me"> For me, coding has been the perfect fusion of analytical and creative thinking. I love that it promotes the use of both sides of my brain while requiring continuous education as languages and frameworks keep evolving.</p>
                     <p class="about-me">When I’m not coding you can find me immersed in nature identifying plants, biking, hiking, brewing beer, and strumming my uke.
                     </p>
-
-
-<!--
-                <div id="profile-deets" class="clearfix">
-                    <p class="about-me">I consider myself a bit of a polymath as I've become adept at a diverse combination of skills through a breadth of experiences. For example: I have surveyed 100's of miles of river for invasive plant species; mixed ideas with other innovative minds while pursuing a certificate in sustainable business; and most recently, I finished a full stack program at Thinkful.</p>
-                    <p class="about-me"> For me, coding has been the perfect fusion of analytical and creative thinking. I love that it promotes the use of both sides of my brain while requiring continuous education as languages and frameworks keep evolving.</p>
-                    <p class="about-me">When I’m not coding you can find me immersed in nature identifying plants, biking, hiking, brewing beer, and strumming my uke.
-                </p>
-                </div>
-                <div id="profile-img">
-                    <img id="profile-pic" src="images/profile-pic" alt="profile picture">
-                </div>
--->
                 </div>
             </section>
 
@@ -159,7 +146,7 @@
         </main>
 
             <footer role="contentinfo">
-                <div id="nav-logo"></div>
+                <div></div>
             </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="script.js" type="text/javascript"></script>
