added hamburger menu

--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
         <nav role="navigation">
            <div class="content">
                <div id="nav-logo"><a href="#" >LEAH BORNS</a></div>
-               <ul id="nav-links">
+                <ul id="nav-links">
+                   <li class="close">&times;</li>
                     <li><a href="#about-me-section" class="jumper">About</a></li>
 <!--                    <li><a href="#skills-section">Skills</a></li>-->
                    <li><a href="#project-section" class="jumper">Projects</a></li>
                    <li><a href="#contact-section" class="jumper">Connect</a></li>
                 </ul>
+               <span class="mobile-btn">☰</span>
+               <div class="overlay"></div>
             </div>
         </nav>
         <main role="main">
