--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <body>
         <nav role="navigation">
            <div class="content">
-               <div id="nav-logo"><a href="#" >LEAH BORNS</a></div>
+               <div id="nav-logo"><a href="#" >leah borns</a></div>
                 <ul id="nav-links">
                    <li class="close">&times;</li>
-                    <li><a href="#about-me-section" class="jumper">About</a></li>
+                    <li class="mobile-hover"><a href="#about-me-section" class="jumper">About</a></li>
 <!--                    <li><a href="#skills-section">Skills</a></li>-->
-                   <li><a href="#project-section" class="jumper">Projects</a></li>
-                   <li><a href="#contact-section" class="jumper">Connect</a></li>
+                    <li class="mobile-hover"><a href="#project-section" class="jumper">Projects</a></li>
+                    <li class="mobile-hover"><a href="#contact-section" class="jumper">Connect</a></li>
                 </ul>
                <span class="mobile-btn">☰</span>
                <div class="overlay"></div>
