--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <header role="banner">
               <div id="header-title">
-               <p id="header-p">The name is <br> <span>Borns</span><br>Leah Borns.
+                  <p id="header-p">The name is <br> <span>Borns</span><br>Leah Borns
                 </p>
                   <p class="header-description">&lt;Full<span class="bold">Stack</span>Developer &#47;&gt;
                   <p class="header-description">&lt;Sustainability<span class="bold">Enabler</span> &#47;&gt;</p> <p class="header-description">&lt;Fresh<span class="bold">Water</span>Lover &#47;&gt;</p>
