--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                 <img src="images/css-3.png" alt="css">
                                 <img src="images/javascript.png" alt="Javascript">
                             </div>
-                        <p>Finding upcoming shows is as easy as a click of a search button but getting to a show can be a nightmare. Not only is parking impossible but it puts so many cars on the road and increases carbon emissions. With Upbeat Atlas I wanted to create an easy way for event goers to locate their next show with a Google map to easily find directions along with a gentle nudge to consider taking a more sustainable way.
+                        <p>Finding upcoming shows is as easy as a click of a search button, but getting to a show can be a nightmare. Not only is parking impossible, but it puts so many cars on the road and increases carbon emissions. With Upbeat Atlas, I wanted to create an easy way for event goers to locate their next show with a Google map to easily find directions along with a gentle nudge to consider taking a more sustainable way.
                         </p>
                     </div>
                     <div class="project-img">
@@ -97,7 +97,7 @@
                             <img src="images/jquery.png" alt="jQuery">
                             <img src="images/nodejs.png" alt="node">
                         </div>
-                            <p>Sustain is the first iteration of an app that will gameify sustainability for touring musicians and their fans. The app will engage fans by having them commit to sustainable activies, document those experiences and get points for it. In the end each fan has gained points to get merchandise as a perk for participating as well as help the artist reduce their overall footprint on tour. By gameifying sustainability it can make some of these practices habitual for each 'player'.
+                            <p>Sustain is the first iteration of an app that will gameify sustainability for touring musicians and their fans. The app will engage fans by having them commit to sustainable activies, document those experiences and get points for it. In the end, each fan has gained points to get merchandise as a perk for participating as well as help the artist reduce their overall footprint on tour. By gameifying sustainability, it can make some of these practices habitual for each 'player'.
                             </p>
                         </div>
                     <div class="project-img">
