added header slogan image

--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
 
             <header role="banner">
               <div id="header-title">
+              <img src="images/header-slogan.png" alt="header slogan">
+<!--
                   <p id="header-p">The name is <br> <span>Borns</span><br>Leah Borns
                 </p>
+-->
                   <p class="header-description">&lt;Full<span class="bold">Stack</span>Developer &#47;&gt;
                   <p class="header-description">&lt;Sustainability<span class="bold">Enabler</span> &#47;&gt;</p> <p class="header-description">&lt;Fresh<span class="bold">Water</span>Lover &#47;&gt;</p>
                 </div>
