got rid of capitals

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                <div id="nav-logo"><a href="#" >leah borns</a></div>
                 <ul id="nav-links">
                    <li class="close">&times;</li>
-                    <li class="mobile-hover"><a href="#about-me-section" class="jumper">About</a></li>
+                    <li class="mobile-hover"><a href="#about-me-section" class="jumper">about</a></li>
 <!--                    <li><a href="#skills-section">Skills</a></li>-->
-                    <li class="mobile-hover"><a href="#project-section" class="jumper">Projects</a></li>
-                    <li class="mobile-hover"><a href="#contact-section" class="jumper">Connect</a></li>
+                    <li class="mobile-hover"><a href="#project-section" class="jumper">projects</a></li>
+                    <li class="mobile-hover"><a href="#contact-section" class="jumper">connect</a></li>
                 </ul>
                <span class="mobile-btn">☰</span>
                <div class="overlay"></div>
@@ -34,15 +34,15 @@
                   <p id="header-p">The name is <br> <span>Borns</span><br>Leah Borns
                 </p>
 -->
-                  <p class="header-description">&lt;Full<span class="bold">Stack</span>Developer &#47;&gt;
-                  <p class="header-description">&lt;Sustainability<span class="bold">Enabler</span> &#47;&gt;</p> <p class="header-description">&lt;Fresh<span class="bold">Water</span>Lover &#47;&gt;</p>
+                  <p class="header-description">full <span class="bold">stack</span> developer
+                  <p class="header-description">sustainability <span class="bold">enabler</span> </p> <p class="header-description">fresh <span class="bold">water</span> lover</p>
                 </div>
 
 
             </header>
 
             <section id="about-me-section">
-                <p id="am-section-header">this is Leah</p>
+                <p id="am-section-header">this is leah</p>
                 <div id="about-me-group">
 
                     <div id="profile-img">
@@ -67,13 +67,13 @@
 -->
 
             <section id="project-section">
-                <p class="section-header">Leah made these</p>
+                <p class="section-header">leah made these</p>
 <!--                UPBEAT ATLAS-->
                 <div id="upbeat-atlas-app">
 
 
                     <div class="project-info">
-                            <h3>Upbeat Atlas</h3>
+                            <h3>upbeat atlas</h3>
                             <div class="tech-image">
                                 <img src="images/html-5.png" alt="html5">
                                 <img src="images/css-3.png" alt="css">
@@ -92,7 +92,7 @@
 <!--                SUSTAIN-->
                 <div id="sustain-app">
                     <div class="project-info">
-                        <h3>Sustain</h3>
+                        <h3>sustain</h3>
                         <div class="tech-image">
                             <img src="images/html-5.png" alt="html5">
                             <img src="images/css-3.png" alt="css">
@@ -116,7 +116,7 @@
 
 
                     <div class="project-info">
-                        <h3>Co<sub>2</sub>mmute Calculator</h3>
+                        <h3>co<sub>2</sub>mmute calculator</h3>
                         <div class="tech-image">
                             <img src="images/html-5.png" alt="html5">
                             <img src="images/css-3.png" alt="css">
@@ -136,7 +136,7 @@
             </section>
 
             <section id="contact-section">
-                <p class="section-header">connect with Leah</p>
+                <p class="section-header">connect with leah</p>
                <div id="contact-info">
                     <p>p. 971.940.2869</p>
                     <p>e. leah.borns@gmail.com</p>
