--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </head>
 
     <body>
+<!--       nav bar with collapsible button. Overlay that appears is below the projects section-->
         <nav role="navigation">
            <div class="content">
                <div id="nav-logo"><a href="#" >leah borns</a></div>
@@ -29,10 +30,6 @@
             <header role="banner">
               <div id="header-title">
               <img src="images/header-slogan.png" alt="header slogan">
-<!--
-                  <p id="header-p">The name is <br> <span>Borns</span><br>Leah Borns
-                </p>
--->
                   <p class="header-description">full <span class="bold">stack</span> developer
                   <p class="header-description">sustainability <span class="bold">enabler</span> </p> <p class="header-description">fresh <span class="bold">water</span> lover</p>
                 </div>
