suggested aesthetic adjustments

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 -->
 
             <section id="project-section">
-                <p class="section-header">leah made these</p>
+                <div class="header-highlight"><p class="section-header">leah made these</p></div>
 <!--                UPBEAT ATLAS-->
                 <div id="upbeat-atlas-app">
 
@@ -133,7 +133,7 @@
             </section>
 
             <section id="contact-section">
-                <p class="section-header">connect with leah</p>
+                <div class="header-highlight"><p class="section-header">connect with leah</p></div>
                <div id="contact-info">
                     <p>p. 971.940.2869</p>
                     <p>e. leah.borns@gmail.com</p>
